Fixed Section Coloring/Alignment Issue

--- a/castleapartments/static/css/main.css
+++ b/castleapartments/static/css/main.css
@@ -40,11 +40,6 @@ carousel-control .glyphicon-chevron-left{
 	background-color: lightgrey;
     border-radius: 15px;
 
-	position: absolute;
-	top:50%;
-	bottom: 0;
-	left: 0;
-	right: 0;
 
     z-index: 2;
 
@@ -78,27 +73,21 @@ h1 {
     font-family: 'Martel', serif;
 }
 
-.opin-hus-container {
-    width: 100em;
-	height: 35em;
-    background-color: lightgrey;
-
+.elements-container {
+    width: 100%;
+	height: auto;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
-
-    margin: auto;
-
     position: relative;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-
-    text-align: center;
+    text-align: left;
 }
 
-.opin-hus-container .well-eign {
+.elements-container .well-eign {
     display: inline-block;
     margin-right: 40px;
     margin-left: 10px;
@@ -120,7 +109,7 @@ h1 {
     width: 30em;
 }
 
-.opin-hus-container .well-starfsmadur {
+.elements-container .well-starfsmadur {
     display: inline-block;
     margin-right: 40px;
     margin-left: 10px;
@@ -132,10 +121,7 @@ h1 {
 }
 
 .starfsmenn {
-    background-color: lightgrey;
-
     width: 90%;
-
     position: relative;
     top: 0;
     bottom: 0;
@@ -165,12 +151,12 @@ h1 {
     width: 100%;
 }
 
-.opin-hus-container .well-eign .eign-img{
+.elements-container .well-eign .eign-img{
     height: 20em;
     width: 100%;
 }
 
-.opin-hus-container .well-starfsmadur .Starfsmenn-img{
+.elements-container .well-starfsmadur .Starfsmenn-img{
     height: 20em;
     width: 100%;
 }
@@ -195,9 +181,15 @@ h1 {
   padding-left: 0px;
   margin-left: 0px;
   margin-right: 0px;
-
-  padding-bottom:50px;
   width: 100%;
+}
+
+#opinhus-container{
+    background-color: #504F59;
+}
+
+#starfsmenn-container{
+    background-color: #A7C1D9;
 }
 
 .masthead {
@@ -474,5 +466,4 @@ nav li #login-content {
 
 .h1 {
     font-family: 'Martel', serif;
-    margin-top: 5%;
 }
